<resources>
    <string name="app_name">JagaKandang</string>
    <string name="title_home">Beranda</string>
    <string name="title_manage">IoT</string>
    <string name="tempTitle">Suhu Udara</string>
    <string name="humidTitle">Kelembaban</string>
    <string name="amoniaTitle">Amonia</string>
    <string name="channelOneTitle">Channel 1</string>
    <string name="channelTwoTitle">Channel 2</string>
    <string name="controlTitle">Kontrol Perangkat IoT</string>
    <string name="iotTitle">Perangkat IoT</string>
    <string name="title_gmail">Gmail</string>
    <string name="titleMessage_gmail">JagaKandang</string>
    <string name="message_gmail">jagakandang29@gmail.com</string>
    <string name="title_whatsapp">WhatsApp</string>
    <string name="titleMessage_whatsapp">JagaKandang</string>
    <string name="message_whatsapp">Halo, Bolehkah Saya bertanya?</string>
    <string name="title_maps">Maps</string>
    <string name="titleMessage_maps">JagaKandang</string>
    <string name="message_maps">Jl. Telekomunikasi No. 1, Terusan Buahbatu - Bojongsoang</string>
    <string name="contactus">Info Pengembang</string>
    <string name="on">Hidup</string>
    <string name="off">Mati</string>
    <string name="automasi">Automasi</string>
    <string name="your_web_client_id">762218118150-7r192qnsic3n1o79im0adf61g6n6k83t.apps.googleusercontent.com</string>
    <string name="good_evening">GOOD EVENING, </string>
    <string name="user">RIKO</string>
    <string name="editTextNamaKandang">Nama Kandang</string>
    <string name="editTextLokasi">Lokasi</string>
    <string name="editTextPopulasi">Populasi</string>
    <string name="editTextKematian">Kematian</string>
    <string name="editTextTanggal">Tanggal Chick-In</string>
    <string name="editTextPakan">Jumlah Pakan(Kg)</string>
    <string name="editTextKeterangan">Keterangan</string>
    <string name="keterangan">Keterangan</string>
    <string name="tambah_data_kandang">Tambah Data Kandang</string>
    <string name="update_data_kandang">Update Data Kandang</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="tambah">Tambah</string>
    <string name="hapus">Hapus</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="nama_kandang_wajib_diisi">Nama Kandang wajib diisi</string>
    <string name="lokasi_wajib_diisi">Lokasi wajib diisi</string>
    <string name="populasi_wajib_diisi">Jumlah Populasi wajib diisi</string>
    <string name="kematian_wajib_diisi">Jumlah Kematian wajib diisi</string>
    <string name="pakan_wajib_diisi">Jumlah Pakan wajib diisi</string>
    <string name="tanggal_wajib_diisi">Tanggal Chick In wajib diisi</string>
    <string name="delete_message">Hapus data terpilih?</string>
    <string name="reset_message_iot">Reset data perangkat?</string>
    <string name="delete_message_iot">Hapus data perangkat?</string>
    <string name="signout_message">Anda yakin ingin Keluar dari Aplikasi ini?</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="selamat_pagi">SELAMAT PAGI,</string>
    <string name="selamat_siang">SELAMAT SIANG,</string>
    <string name="selamat_sore">SELAMAT SORE,</string>
    <string name="selamat_malam">SELAMAT MALAM,</string>
    <string name="reset">RESET</string>
    <string name="empty_data_home">Belum ada data</string>
    <string name="empty_data_iot">Belum ada perangkat tersambung</string>
    <string name="perangkat_id">Perangkat ID</string>
    <string name="nama_perangkat">Nama Perangkat</string>
    <string name="lokasi_perangkat">Lokasi Perangkat</string>
    <string name="luas_lokasi">Luas Lokasi</string>
    <string name="suhu_minimal">Suhu Min. (℃)</string>
    <string name="suhu_maksimal">Suhu Maks. (℃)</string>
    <string name="kelembaban_minimal">Kelembaban Min. (%)</string>
    <string name="kelembaban_maksimal">Kelembaban Maks. (%)</string>
    <string name="amonia_maksimal">Amonia Maks. (ppm)</string>
    <string name="update_data_perangkat">Update Data Perangkat</string>
    <string name="nama_perangkat_wajib_diisi">Nama Perangkat wajib diisi</string>
    <string name="lokasi_perangkat_wajib_diisi">Lokasi Perangkat wajib diisi</string>
    <string name="luas_lokasi_wajib_diisi">Luas Lokasi wajib diisi</string>
    <string name="suhu_min_wajib_diisi">Suhu Min. wajib diisi</string>
    <string name="suhu_maks_wajib_diisi">Suhu Max. wajib diisi</string>
    <string name="suhu_maks_harus_diatas_suhu_min">Suhu Max. harus diatas Suhu Min.</string>
    <string name="kelembaban_min_wajib_diisi">Kelembaban Min. wajib diisi</string>
    <string name="kelembaban_max_wajib_diisi">Kelembaban Max. wajib diisi</string>
    <string name="kelembaban_max_harus_diatas_kelembaban_min">Kelembaban Max. harus diatas Kelembaban Min.</string>
    <string name="amonia_max_wajib_diisi">Amonia Max. wajib diisi</string>
    <string name="blower">Blower</string>
    <string name="heater">Heater</string>
    <string name="automation_on_message">Anda yakin ingin masuk ke mode automasi? Pastikan Channel 1 harus tersambung perangkat blower dan Channel 2 harus tersambung perangkat heater.</string>
    <string name="automation_off_message">Keluar dari mode Automasi?</string>
    <string name="detail_informasi">Detail Informasi</string>
    <string name="jaga_kandang">Jaga Kandang</string>
    <string name="jaga_kandang_upper">JAGA KANDANG</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="uid">UID</string>
    <string name="info_pengguna">Info Pengguna</string>
    <string name="masuk_dengan_google">MASUK DENGAN GOOGLE</string>
    <string name="keluar">KELUAR</string>
    <string name="pencatatan_data_kandang">Pencatatan Data Kandang</string>
    <string name="prototype1">Prototype1</string>
    <string name="celcius">°C</string>
    <string name="suhu_eg">28.7</string>
    <string name="kelembaban_eg">74.8</string>
    <string name="percent">%</string>
    <string name="amonia_eg">0.28</string>
    <string name="ppm">ppm</string>
</resources>