<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editTextJumlahPakan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="?dialogPreferredPadding"
    android:paddingEnd="?dialogPreferredPadding"
    android:paddingStart="?dialogPreferredPadding"
    android:paddingTop="?dialogPreferredPadding">

    <EditText
        android:id="@+id/editTextNamaKandang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextNamaKandang"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLokasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/editTextLokasi"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNamaKandang"
        app:layout_constraintStart_toStartOf="@+id/editTextNamaKandang"
        app:layout_constraintTop_toBottomOf="@+id/editTextNamaKandang" />

    <EditText
        android:id="@+id/editTextKeterangan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/editTextKeterangan"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/editTextPakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextPakan"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextTanggal"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/editTextLokasi"
        app:layout_constraintStart_toStartOf="@+id/editTextLokasi"
        app:layout_constraintTop_toBottomOf="@+id/editTextLokasi">

        <EditText
            android:id="@+id/editTextPopulasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextPopulasi"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextKematian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextKematian"
            android:inputType="number" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>