<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="?dialogPreferredPadding"
    android:paddingTop="?dialogPreferredPadding"
    android:paddingEnd="?dialogPreferredPadding"
    android:paddingBottom="?dialogPreferredPadding">

    <EditText
        android:id="@+id/editTextNamaPerangkat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nama_perangkat"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLokasiPerangkat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/lokasi_perangkat"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNamaPerangkat"
        app:layout_constraintStart_toStartOf="@+id/editTextNamaPerangkat"
        app:layout_constraintTop_toBottomOf="@+id/editTextNamaPerangkat" />

    <EditText
        android:id="@+id/editTextLuasLokasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/luas_lokasi"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextLokasiPerangkat"
        app:layout_constraintStart_toStartOf="@+id/editTextLokasiPerangkat"
        app:layout_constraintTop_toBottomOf="@+id/editTextLokasiPerangkat" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/editTextLuasLokasi"
        app:layout_constraintStart_toStartOf="@+id/editTextLuasLokasi"
        app:layout_constraintTop_toBottomOf="@+id/editTextLuasLokasi">

        <EditText
            android:id="@+id/editTextSuhuMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/suhu_minimal"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextSuhuMaks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/suhu_maksimal"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/editTextKelembabanMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/kelembaban_minimal"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextKelembabanMaks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/kelembaban_maksimal"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/editTextAmoniaMaks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/amonia_maksimal"
            android:inputType="number" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>